changed some text

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <meta name="description" content="Web Design and Development Service" />
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
-    <title>Lionel | Web Services</title>
+    <title>Lionel Ritchie</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
